# device_board_oneplus_fajita

./: BUILD.gn  device.gni  ohos.build
cfg/: BUILD.gn
distributedhardware/: BUILD.gn
image/: BUILD.gn  README.md  build_bootimg.py
kernel/: 32_kernel_build.sh  64_kernel_build.sh  BUILD.gn  check_patch.sh  make_kernel.mk  make_kernel.sh  module_build.sh
patches/: openharmony_kernel_patch.py
test/: BUILD.gn
test/native_window_ohos/: Makefile  native_main
